_Source/force-app/main/default/objects/BI_Compensation__c/BI_Compensation__c.object-meta.xml
<CustomObject>
    <description>Allows you to capture how a customer was compensated when working on or closing a case</description>
    <label>Compensation</label>
    <nameField>
        <displayFormat>COMP-{000000}</displayFormat>
        <label>Compensation Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>