_Source/force-app/main/default/objects/BI_Compensation__c/fields/BI_Case__c.field-meta.xml
<CustomField>
    <fullName>BI_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Compensation</relationshipLabel>
    <relationshipName>Compensation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>