_Source/force-app/main/default/objects/BI_Compensation__c/fields/BI_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft ($ amount)</fullName>
            </value>
            <value>
                <fullName>EFT* ($ amount)</fullName>
            </value>
            <value>
                <fullName>ETC* ($ amount)</fullName>
            </value>
            <value>
                <fullName>Gift card ($ amount)</fullName>
            </value>
            <value>
                <fullName>Miles (# of)</fullName>
            </value>
            <value>
                <fullName>MileagePlus GS (# of)</fullName>
            </value>
            <value>
                <fullName>MileagePlus 1K (# of)</fullName>
            </value>
            <value>
                <fullName>MileagePlus Platinum (# of)</fullName>
            </value>
            <value>
                <fullName>MileagePlus Gold (# of)</fullName>
            </value>
            <value>
                <fullName>MileagePlus Silver (# of)</fullName>
            </value>
            <value>
                <fullName>OFOP ($ amount)</fullName>
            </value>
            <value>
                <fullName>Service Funds ($ amount)</fullName>
            </value>
            <value>
                <fullName>United Club Pass (# of)</fullName>
            </value>
            <value>
                <fullName>United Club Membership (# of)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>