_Source/force-app/main/default/objects/BI_Compensation__c/fields/BI_Value__c.field-meta.xml
<CustomField>
    <fullName>BI_Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>