_Source/force-app/main/default/objects/BI_Compensation__c/fields/BI_Value_Represents__c.field-meta.xml
<CustomField>
    <fullName>BI_Value_Represents__c</fullName>
    <label>Value Represents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$ dollar amount</fullName>
            </value>
            <value>
                <fullName># number of</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>